Added the new skill

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><span>HTML</span></li>
             <li><span>SCSS</span></li>
             <li><span>Java Script</span></li>
+            <li><span>Git</span></li>
           </ul>
 
           <br />
