Change a projects description

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           </p>
           <p class="p-4">
             Twitter clone (home page) that i made with html, css and some js (js
-            part is not finished). The project was made to consolidate the
-            knowledge of html, css.
+            part is not finished) with responive design. The project was made to
+            consolidate the knowledge of html, css.
             <br />
             <br />
             Source:
@@ -123,8 +123,9 @@
             >)
           </p>
           <p class="p-4">
-            Just static youtube clone (home page) that i made with html, css.
-            The project was made to consolidate the knowledge of html, css.
+            Just static youtube clone (home page) that i made with html, css
+            with responive design. The project was made to consolidate the
+            knowledge of html, css.
             <br />
             <br />
             Source:
