--- a/index.html
+++ b/index.html
@@ -45,19 +45,108 @@
             <li><span>HTML</span></li>
             <li><span>SCSS</span></li>
             <li><span>Java Script</span></li>
-            <li><span>Git</span></li>
+            <li><span>React</span></li>
+            <li><span>Firebase</span></li>
+            <li><span>Axios</span></li>
+            <li><span>BEM</span></li>
+            <li><span>OOP</span></li>
+            <li><span>BEM</span></li>
+            <li><span>MVC</span></li>
+            <li><span>GIT</span></li>
           </ul>
 
           <br />
           <p class="head">Languages</p>
-          <p class="p3">Russian</p>
-          <p class="p3">Ukrainian</p>
-          <p class="p3">English</p>
+          <p class="p3">Russian - Fluent</p>
+          <p class="p3">Ukrainian - Native</p>
+          <p class="p3">English - B1</p>
         </div>
       </div>
       <div class="line"></div>
       <div class="col-div-8">
         <div class="content-box">
+          <p class="head">PROJECTS</p>
+
+          <p>
+            The Witcher Wiki (<a
+              target="_blank"
+              href="https://witcher-wiki.vercel.app"
+              >https://witcher-wiki.vercel.app</a
+            >)
+          </p>
+          <p class="p-4">
+            Witcher wiki website where you can find information about witcher's
+            world. Used HTML, SCSS, REACT, FIREBASE. Also it's fully responsive.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/witcher-wiki"
+              >https://github.com/JackSoer/witcher-wiki</a
+            >
+          </p>
+
+          <p>
+            Quiz Game Platform (<a
+              target="_blank"
+              href="https://quiz-game-murex.vercel.app/#"
+              >https://quiz-game-murex.vercel.app/#</a
+            >)
+          </p>
+          <p class="p-4">
+            Quiz Game Platform where you can play different quizzes. It also has
+            a game soundtrack. Used HTML, SCSS, JS. Also it's fully responsive.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/quiz-game"
+              >https://github.com/JackSoer/quiz-game</a
+            >
+          </p>
+
+          <p>
+            Weather App (<a
+              target="_blank"
+              href="https://weather-app-tau-beryl.vercel.app/#"
+              >https://weather-app-tau-beryl.vercel.app/#</a
+            >)
+          </p>
+          <p class="p-4">
+            Weather App where you can find information about weather in your
+            area. Used HTML, SCSS, REACT, WeatherAPI. It has mobile design for
+            now.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/weather-app"
+              >https://github.com/JackSoer/weather-app</a
+            >
+          </p>
+
+          <p>
+            Calculator (<a
+              target="_blank"
+              href="https://calculator-flame-delta.vercel.app"
+              >https://calculator-flame-delta.vercel.app</a
+            >)
+          </p>
+          <p class="p-4">
+            A complete calculator with all the necessary functionality and more.
+            It also has a theme changer. . Used HTML, SCSS, JS, OOP, MVC.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/calculator"
+              >https://github.com/JackSoer/calculator</a
+            >
+          </p>
+
+          <p class="head">Education</p>
+          <p class="p-4">
+            Junior Software specialist - Zaporizhzhia Institute of Economics and
+            Information Technologies (2019 ­ 2023)
+          </p>
+          <p class="p-4">Secondary school education (2010 - 2019)</p>
+
           <p class="head">about me</p>
           <p class="p3" style="font-size: 14px">
             From the moment I produced “Hello World” in the console of my first
@@ -71,74 +160,6 @@
             Below you'll find projects I've completed that showcase my skills
             and general background in developing software.
           </p>
-          <br />
-          <p class="head">EXPERIENCE</p>
-
-          <p>
-            Calculator (<a
-              target="_blank"
-              href="https://calculator-flame-delta.vercel.app"
-              >https://calculator-flame-delta.vercel.app</a
-            >)
-          </p>
-          <p class="p-4">
-            This is a complete calculator that i made using html, css, js. It
-            has all the basic functionality and more. For example, a percantage
-            button or plus/minus button that changes a negative number to
-            positive or vice versa. It also has a good design and has a theme
-            change from dark to light. The project was made to consolidate the
-            knowledge of html, scss, js.
-            <br />
-            <br />
-            Source:
-            <a href="https://github.com/JackSoer/calculator"
-              >https://github.com/JackSoer/calculator</a
-            >
-          </p>
-
-          <p>
-            Twitter clone (<a
-              target="_blank"
-              href="https://twitter-clone-two-gray.vercel.app/#"
-              >https://twitter-clone-two-gray.vercel.app/#</a
-            >)
-          </p>
-          <p class="p-4">
-            Twitter clone (home page) that i made with html, css and some js (js
-            part is not finished) with responive design. The project was made to
-            consolidate the knowledge of html, css.
-            <br />
-            <br />
-            Source:
-            <a href="https://github.com/JackSoer/twitter-clone"
-              >https://github.com/JackSoer/twitter-clone</a
-            >
-          </p>
-
-          <p>
-            Youtube clone (<a
-              target="_blank"
-              href="https://youtube-clone-two-wine.vercel.app"
-              >https://youtube-clone-two-wine.vercel.app</a
-            >)
-          </p>
-          <p class="p-4">
-            Just static youtube clone (home page) that i made with html, css
-            with responive design. The project was made to consolidate the
-            knowledge of html, css.
-            <br />
-            <br />
-            Source:
-            <a href="https://github.com/JackSoer/youtube-clone"
-              >https://github.com/JackSoer/youtube-clone</a
-            >
-          </p>
-
-          <br />
-
-          <p class="head">Education</p>
-          <p class="p-4">Secondary school education (2010 - 2019)</p>
-          <p class="p-4">Junior Software specialist (2019 - 2023)</p>
         </div>
       </div>
 
