--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             &nbsp;&nbsp;kirillrotko1@gmail.com
           </p>
           <p class="p3">
-            <i class="fa fa-home" aria-hidden="true"></i> &nbsp;&nbsp;Ukraine
+            <i class="fa fa-home" aria-hidden="true"></i> &nbsp;&nbsp;Ukraine,
+            Zaporizhzhia
           </p>
           <p class="p3" style="display: flex; align-items: center">
             <i class="fa fa-github" aria-hidden="true"></i>
@@ -40,19 +41,19 @@
           </p>
 
           <br />
-          <p class="head">my skills</p>
+          <p class="head">My skills</p>
           <ul class="skills">
             <li><span>HTML</span></li>
             <li><span>SCSS</span></li>
-            <li><span>Java Script</span></li>
+            <li><span>JavaScript</span></li>
             <li><span>React</span></li>
             <li><span>Firebase</span></li>
             <li><span>Axios</span></li>
             <li><span>BEM</span></li>
             <li><span>OOP</span></li>
-            <li><span>BEM</span></li>
             <li><span>MVC</span></li>
-            <li><span>GIT</span></li>
+            <li><span>REST-API</span></li>
+            <li><span>GIT/GITHUB</span></li>
           </ul>
 
           <br />
@@ -86,24 +87,6 @@
           </p>
 
           <p>
-            Quiz Game Platform (<a
-              target="_blank"
-              href="https://quiz-game-murex.vercel.app/#"
-              >https://quiz-game-murex.vercel.app/#</a
-            >)
-          </p>
-          <p class="p-4">
-            Quiz Game Platform where you can play different quizzes. It also has
-            a game soundtrack. Used HTML, SCSS, JS. Also it's fully responsive.
-            <br />
-            <br />
-            GitHub:
-            <a href="https://github.com/JackSoer/quiz-game"
-              >https://github.com/JackSoer/quiz-game</a
-            >
-          </p>
-
-          <p>
             Weather App (<a
               target="_blank"
               href="https://weather-app-tau-beryl.vercel.app/#"
@@ -119,6 +102,25 @@
             GitHub:
             <a href="https://github.com/JackSoer/weather-app"
               >https://github.com/JackSoer/weather-app</a
+            >
+          </p>
+
+          <p>
+            Quiz Game Platform (<a
+              target="_blank"
+              href="https://quiz-game-murex.vercel.app/#"
+              >https://quiz-game-murex.vercel.app/#</a
+            >)
+          </p>
+          <p class="p-4">
+            Quiz Game Platform where you can play different quizzes. It also has
+            a game soundtrack. Used HTML, SCSS, JS, OOP, MVC. Also it's fully
+            responsive.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/quiz-game"
+              >https://github.com/JackSoer/quiz-game</a
             >
           </p>
 
@@ -143,9 +145,8 @@
           <p class="head">Education</p>
           <p class="p-4">
             Junior Software specialist - Zaporizhzhia Institute of Economics and
-            Information Technologies (2019 ­ 2023)
+            Information Technologies (2019 -­ 2023)
           </p>
-          <p class="p-4">Secondary school education (2010 - 2019)</p>
 
           <p class="head">about me</p>
           <p class="p3" style="font-size: 14px">
