Change my skills

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><span>HTML</span></li>
             <li><span>SCSS</span></li>
             <li><span>JavaScript</span></li>
+            <li><span>TypeScript</span></li>
             <li><span>React</span></li>
             <li><span>Firebase</span></li>
             <li><span>Axios</span></li>
