--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 
           <p class="head">Education</p>
           <p class="p-4">
-            Junior Software specialist - Zaporizhzhia Institute of Economics and
-            Information Technologies (2019 -­ 2023)
+            Junior Software Engineering Specialist - Zaporizhzhia Institute of
+            Economics and Information Technologies (2019 -­ 2023)
           </p>
 
           <p class="head">about me</p>
