--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <li><span>MVC</span></li>
             <li><span>REST-API</span></li>
             <li><span>GIT/GITHUB</span></li>
+            <li><span>1C</span></li>
           </ul>
 
           <br />
