index.html was updated

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <p class="head">My skills</p>
           <ul class="skills">
             <li><span>HTML</span></li>
+            <li><span>CSS</span></li>
             <li><span>SCSS</span></li>
             <li><span>JavaScript</span></li>
             <li><span>TypeScript</span></li>
