--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
       <div class="top-section">
         <p class="p1">KIRILL <span>ROTKO</span></p>
-        <p class="p2">Front-end developer</p>
+        <p class="p2">Full-stack developer</p>
       </div>
       <div class="clearfix"></div>
 
@@ -43,6 +43,8 @@
           <br />
           <p class="head">My skills</p>
           <ul class="skills">
+            <li><span>PHP</span></li>
+            <li><span>MySQL</span></li>
             <li><span>HTML</span></li>
             <li><span>CSS</span></li>
             <li><span>SCSS</span></li>
@@ -70,6 +72,20 @@
         <div class="content-box">
           <p class="head">PROJECTS</p>
 
+          <p>Expense tracker</p>
+          <p class="p-4">
+            Expense tracker that allows to download csv transactions files and
+            show expense, income, net total and a table with transactions
+            history based on these files. It also saves transactions to
+            database. Used PHP, MySQL, HTML, CSS, OOP, MVC.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/expense-tracker"
+              >https://github.com/JackSoer/expense-tracker</a
+            >
+          </p>
+
           <p>
             The Witcher Wiki (<a
               target="_blank"
@@ -79,7 +95,9 @@
           </p>
           <p class="p-4">
             Witcher wiki website where you can find information about witcher's
-            world. Used HTML, SCSS, REACT, FIREBASE. Also it's fully responsive.
+            world. There is also add, edit articles, admin panel, linking
+            between and more. Used HTML, SCSS, REACT, FIREBASE. Also it's fully
+            responsive.
             <br />
             <br />
             GitHub:
@@ -146,7 +164,10 @@
 
           <p class="head">Education</p>
           <p class="p-4">
-            Junior Software Engineering Specialist - Zaporizhzhia Institute of
+            Software Engineering - Zaporizʹkyy Natsionalʹnyy Universytet (2023)
+          </p>
+          <p class="p-4">
+            Software Engineering Specialist - Zaporizhzhia Institute of
             Economics and Information Technologies (2019 -­ 2023)
           </p>
 
@@ -156,12 +177,7 @@
             application, I knew I was hooked into the world of software
             development. But software development has never been “just a job”
             for me, it’s offered an engaging challenge to continually learn and
-            improve my skills in creating high-quality software. What started
-            with a simple “Hello World” has become a full-fledged passion that
-            only gets more exciting as the years go by.<br />
-
-            Below you'll find projects I've completed that showcase my skills
-            and general background in developing software.
+            improve my skills in creating high-quality software. <br />
           </p>
         </div>
       </div>
