--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
       <div class="top-section">
         <p class="p1">KIRILL <span>ROTKO</span></p>
-        <p class="p2">Full-stack developer</p>
+        <p class="p2">Front-end developer</p>
       </div>
       <div class="clearfix"></div>
 
@@ -43,8 +43,6 @@
           <br />
           <p class="head">My skills</p>
           <ul class="skills">
-            <li><span>PHP</span></li>
-            <li><span>MySQL</span></li>
             <li><span>HTML</span></li>
             <li><span>CSS</span></li>
             <li><span>SCSS</span></li>
@@ -52,6 +50,8 @@
             <li><span>TypeScript</span></li>
             <li><span>React</span></li>
             <li><span>Firebase</span></li>
+            <li><span>PHP</span></li>
+            <li><span>MySQL</span></li>
             <li><span>Axios</span></li>
             <li><span>BEM</span></li>
             <li><span>OOP</span></li>
@@ -71,20 +71,6 @@
       <div class="col-div-8">
         <div class="content-box">
           <p class="head">PROJECTS</p>
-
-          <p>Expense tracker</p>
-          <p class="p-4">
-            Expense tracker that allows to download csv transactions files and
-            show expense, income, net total and a table with transactions
-            history based on these files. It also saves transactions to
-            database. Used PHP, MySQL, HTML, CSS, OOP, MVC.
-            <br />
-            <br />
-            GitHub:
-            <a href="https://github.com/JackSoer/expense-tracker"
-              >https://github.com/JackSoer/expense-tracker</a
-            >
-          </p>
 
           <p>
             The Witcher Wiki (<a
@@ -115,8 +101,7 @@
           </p>
           <p class="p-4">
             Weather App where you can find information about weather in your
-            area. Used HTML, SCSS, REACT, WeatherAPI. It has mobile design for
-            now.
+            area. Used HTML, SCSS, REACT, WeatherAPI.
             <br />
             <br />
             GitHub:
@@ -159,6 +144,20 @@
             GitHub:
             <a href="https://github.com/JackSoer/calculator"
               >https://github.com/JackSoer/calculator</a
+            >
+          </p>
+
+          <p>Expense tracker</p>
+          <p class="p-4">
+            Expense tracker that allows to download csv transactions files and
+            show expense, income, net total and a table with transactions
+            history based on these files. It also saves transactions to
+            database. Used PHP, MySQL, HTML, CSS, OOP, MVC.
+            <br />
+            <br />
+            GitHub:
+            <a href="https://github.com/JackSoer/expense-tracker"
+              >https://github.com/JackSoer/expense-tracker</a
             >
           </p>
 
