--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="p-4">
             Witcher wiki website where you can find information about witcher's
             world. There is also add, edit articles, admin panel, linking
-            between and more. Used HTML, SCSS, REACT, FIREBASE. Also it's fully
+            between articles and more. Also it's fully
             responsive.
             <br />
             <br />
@@ -101,7 +101,7 @@
           </p>
           <p class="p-4">
             Weather App where you can find information about weather in your
-            area. Used HTML, SCSS, REACT, WeatherAPI.
+            area. 
             <br />
             <br />
             GitHub:
@@ -118,8 +118,7 @@
             >)
           </p>
           <p class="p-4">
-            Quiz Game Platform where you can play different quizzes. It also has
-            a game soundtrack. Used HTML, SCSS, JS, OOP, MVC. Also it's fully
+            Quiz Game Platform where you can play different quizzes.  Also it's fully
             responsive.
             <br />
             <br />
@@ -137,27 +136,13 @@
             >)
           </p>
           <p class="p-4">
-            A complete calculator with all the necessary functionality and more.
-            It also has a theme changer. . Used HTML, SCSS, JS, OOP, MVC.
+            A complete calculator with all the necessary functionality and validations.
+            It also has a theme changer. 
             <br />
             <br />
             GitHub:
             <a href="https://github.com/JackSoer/calculator"
               >https://github.com/JackSoer/calculator</a
-            >
-          </p>
-
-          <p>Expense tracker</p>
-          <p class="p-4">
-            Expense tracker that allows to download csv transactions files and
-            show expense, income, net total and a table with transactions
-            history based on these files. It also saves transactions to
-            database. Used PHP, MySQL, HTML, CSS, OOP, MVC.
-            <br />
-            <br />
-            GitHub:
-            <a href="https://github.com/JackSoer/expense-tracker"
-              >https://github.com/JackSoer/expense-tracker</a
             >
           </p>
 
